ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: onlineboutique
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  #tls:
  #  - hosts:
  #    - xyz.studygroup.tech
  #    secretName: domain-name-secret
  rules:
  #- host: xyz.studygroup.tech
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
